# CrossFlow

./: package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/models/: file.rs
src-tauri/src/server/: handlers.rs  mod.rs  routes.rs  web_ui.html  web_ui.rs
src-tauri/src/services/: device_tracker.rs  file_service.rs  mod.rs  network.rs  qr_service.rs
src/components/: DeviceList.tsx  DirectorySelector.tsx  QRCodeDisplay.tsx  ServerControl.tsx
src/hooks/: useServer.ts
src/services/: api.ts
src/types/: index.ts
